# NestingApp

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: build.yml
NestingApp-github/NestingApp_v7/src/: Geometry.cpp  LXDExporter.h  Part.cpp  Part.h
NestingApp/src/: DXFLoader.h  GeneticAlgorithm.cpp  Geometry.cpp  Geometry.h  MainWindow.h  NestingEngine.cpp  NestingEngine.h  Sheet.cpp  main.cpp
NestingApp_v7/: CMakeLists.txt  INSTALL.md
NestingApp_v7/installer/: NestingApp.iss  NestingApp_ci.iss  build_linux.sh  build_windows.ps1
NestingApp_v7/installer/NestingApp_installer/: NestingApp_installer.iss  README_INSTALL.md  install_linux.sh  install_windows.bat  install_windows.ps1
NestingApp_v7/installer/NestingApp_installer/config/: machines.json  materials.json  settings.ini
NestingApp_v7/src/: CMakeLists.txt  DXFLoader.cpp  DXFLoader.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  Geometry.cpp  Geometry.h  LXDExporter.cpp  MainWindow.cpp  MainWindow.h  NestingEngine.cpp  NestingEngine.h  README.md  Sheet.cpp  Sheet.h  ThreadPool.h  test_dxf.cpp  test_dxf2.cpp
src/: DatabaseManager.cpp  DatabaseManager.h  EmployeeRating.cpp  EmployeeRating.h  EmployeesForm.cpp  EmployeesForm.h  InventoryManager.cpp  InventoryManager.h  MainWindow.cpp  MainWindow.h  Material.cpp  Material.h  MaterialDelegate.cpp  MaterialDelegate.h  MaterialsForm.cpp  MaterialsForm.h  Movement.cpp  Movement.h  MovementForm.cpp  MovementForm.h  Norm.cpp  Norm.h  NotificationSystem.cpp  NotificationSystem.h  PerformedForm.cpp  PerformedForm.h  Receipt.cpp  Receipt.h  ReceiptForm.cpp  ReceiptForm.h  SalaryForm.cpp  SalaryForm.h  ShipmentForm.cpp  ShipmentForm.h  main.cpp
